# jesuscollegemusicsociety.github.io

./: .gitignore  LICENSE  README.md  assets.yml  build.py  pyproject.toml
.github/workflows/: build.yml
jcms_site/: __init__.py  images.py
jcms_site/data/: committee.yml  home-carousel.yml  sitemap.yml
jcms_site/images/: concert.avif  termcard.avif
jcms_site/static/: base.css  base.js  jcms-logo.avif
jcms_site/static/favicon/: site.webmanifest
jcms_site/static/photos/: concert.avif  snowman.avif
jcms_site/static/src/css/: base.css  fonts.css  reset.css  variables.css
jcms_site/static/src/js/: base.js
jcms_site/templates/: about.html  calendar.html  catalogue.html  committee.html  concert-archives.html  ensembles-events.html  ensembles.html  hire.html  index.html  inventory.html  termcard.html
jcms_site/templates/layouts/: base.html  footer.html  header.html  macros.html
jcms_site/text/: about.md  concert-archives.md  ensembles-events.md  ensembles.md  hire.md
